// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo esv secret list "frodo esv secret list --usage --long --directory test/e2e/exports/all-separate/everything": should list the ids, active/loaded versions, statuses, descriptions, modifiers, modified times, and usage of the esv secrets in the test/e2e/exports/all-separate/everything directory 1`] = `
"Id                                 │ Active│ Loaded│Status│Description                             │Modifier                            │Modified (UTC)               │Used                                                                                
                                   │Version│Version│      │                                        │                                    │                             │                                                                                    
esv-admin-token                    │      1│      1│loaded│Long-lived admin token                  │ba58ff99-76d3-4c69-9c4a-7f150ac70e2c│Wed, 20 Mar 2024 14:46:13 GMT│no                                                                                  
esv-test-secret-cert-pem           │      1│      1│loaded│This is a test secret from a pem encoded│6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:48:49 GMT│no                                                                                  
                                   │       │       │      │cert file.                              │                                    │                             │                                                                                    
esv-test-secret-cert-pem-raw       │      1│      1│loaded│This is a test secret from a pem encoded│6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:49:20 GMT│no                                                                                  
                                   │       │       │      │cert file (raw).                        │                                    │                             │                                                                                    
esv-test-secret-euler              │      1│      1│loaded│A test secret containing the value of   │phales@trivir.com                   │Thu, 14 Dec 2023 15:27:34 GMT│no                                                                                  
                                   │       │       │      │Euler's number                          │                                    │                             │                                                                                    
esv-test-secret-file-base64hmac    │      1│      1│loaded│This is a test secret from base64       │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:46:37 GMT│no                                                                                  
                                   │       │       │      │encoded hmac key file.                  │                                    │                             │                                                                                    
esv-test-secret-file-base64hmac-raw│      1│      1│loaded│This is a test secret from base64       │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:47:03 GMT│no                                                                                  
                                   │       │       │      │encoded hmac key file (raw).            │                                    │                             │                                                                                    
esv-test-secret-pi                 │      1│      1│loaded│Secret that contains the value of pi    │phales@trivir.com                   │Thu, 14 Dec 2023 15:22:28 GMT│yes (at script.59f84396-71e4-4c1d-a6ae-c4fc624d9752(name: 'Test-Script-1').script.4)
esv-test-secret-pi-generic         │      2│      2│loaded│                                        │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 00:15:02 GMT│no                                                                                  
"
`;

exports[`frodo esv secret list "frodo esv secret list --usage --long --file test/e2e/exports/all/Alpha.everything.json": should list the ids, active/loaded versions, statuses, descriptions, modifiers, modified times, and usage of the esv secrets in the Alpha.everything.json file 1`] = `
"Id                                 │ Active│ Loaded│Status│Description                             │Modifier                            │Modified (UTC)               │Used                                                                                
                                   │Version│Version│      │                                        │                                    │                             │                                                                                    
esv-admin-token                    │      1│      1│loaded│Long-lived admin token                  │ba58ff99-76d3-4c69-9c4a-7f150ac70e2c│Wed, 20 Mar 2024 14:46:13 GMT│no                                                                                  
esv-test-secret-cert-pem           │      1│      1│loaded│This is a test secret from a pem encoded│6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:48:49 GMT│no                                                                                  
                                   │       │       │      │cert file.                              │                                    │                             │                                                                                    
esv-test-secret-cert-pem-raw       │      1│      1│loaded│This is a test secret from a pem encoded│6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:49:20 GMT│no                                                                                  
                                   │       │       │      │cert file (raw).                        │                                    │                             │                                                                                    
esv-test-secret-euler              │      1│      1│loaded│A test secret containing the value of   │phales@trivir.com                   │Thu, 14 Dec 2023 15:27:34 GMT│no                                                                                  
                                   │       │       │      │Euler's number                          │                                    │                             │                                                                                    
esv-test-secret-file-base64hmac    │      1│      1│loaded│This is a test secret from base64       │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:46:37 GMT│no                                                                                  
                                   │       │       │      │encoded hmac key file.                  │                                    │                             │                                                                                    
esv-test-secret-file-base64hmac-raw│      1│      1│loaded│This is a test secret from base64       │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:47:03 GMT│no                                                                                  
                                   │       │       │      │encoded hmac key file (raw).            │                                    │                             │                                                                                    
esv-test-secret-pi                 │      1│      1│loaded│Secret that contains the value of pi    │phales@trivir.com                   │Thu, 14 Dec 2023 15:22:28 GMT│yes (at script.59f84396-71e4-4c1d-a6ae-c4fc624d9752(name: 'Test-Script-1').script.4)
esv-test-secret-pi-generic         │      2│      2│loaded│                                        │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 00:15:02 GMT│no                                                                                  
"
`;

exports[`frodo esv secret list "frodo esv secret list -l": should list the ids, active/loaded versions, statuses, descriptions, modifiers, and modified times of the esv secrets 1`] = `
"Id                                 │ Active│ Loaded│Status│Description                             │Modifier                            │Modified (UTC)               
                                   │Version│Version│      │                                        │                                    │                             
esv-admin-token                    │      1│      1│loaded│Long-lived admin token                  │ba58ff99-76d3-4c69-9c4a-7f150ac70e2c│Wed, 20 Mar 2024 14:46:13 GMT
esv-test-secret-cert-pem           │      1│      1│loaded│This is a test secret from a pem encoded│6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:48:49 GMT
                                   │       │       │      │cert file.                              │                                    │                             
esv-test-secret-cert-pem-raw       │      1│      1│loaded│This is a test secret from a pem encoded│6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:49:20 GMT
                                   │       │       │      │cert file (raw).                        │                                    │                             
esv-test-secret-euler              │      1│      1│loaded│A test secret containing the value of   │phales@trivir.com                   │Thu, 14 Dec 2023 15:27:34 GMT
                                   │       │       │      │Euler's number                          │                                    │                             
esv-test-secret-file-base64hmac    │      1│      1│loaded│This is a test secret from base64       │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:46:37 GMT
                                   │       │       │      │encoded hmac key file.                  │                                    │                             
esv-test-secret-file-base64hmac-raw│      1│      1│loaded│This is a test secret from base64       │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:47:03 GMT
                                   │       │       │      │encoded hmac key file (raw).            │                                    │                             
esv-test-secret-pi                 │      1│      1│loaded│Secret that contains the value of pi    │phales@trivir.com                   │Thu, 14 Dec 2023 15:22:28 GMT
esv-test-secret-pi-generic         │      2│      2│loaded│                                        │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 00:15:02 GMT
"
`;

exports[`frodo esv secret list "frodo esv secret list -lu": should list the ids, active/loaded versions, statuses, descriptions, modifiers, modified times, and usage of the esv secrets 1`] = `
"Id                                 │ Active│ Loaded│Status│Description                             │Modifier                            │Modified (UTC)               │Used                                                                                      
                                   │Version│Version│      │                                        │                                    │                             │                                                                                          
esv-admin-token                    │      1│      1│loaded│Long-lived admin token                  │ba58ff99-76d3-4c69-9c4a-7f150ac70e2c│Wed, 20 Mar 2024 14:46:13 GMT│yes (at script.9674f7d1-7448-4544-879e-91587bb04f46(name: 'Get esv admin token').script.4)
esv-test-secret-cert-pem           │      1│      1│loaded│This is a test secret from a pem encoded│6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:48:49 GMT│no                                                                                        
                                   │       │       │      │cert file.                              │                                    │                             │                                                                                          
esv-test-secret-cert-pem-raw       │      1│      1│loaded│This is a test secret from a pem encoded│6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:49:20 GMT│no                                                                                        
                                   │       │       │      │cert file (raw).                        │                                    │                             │                                                                                          
esv-test-secret-euler              │      1│      1│loaded│A test secret containing the value of   │phales@trivir.com                   │Thu, 14 Dec 2023 15:27:34 GMT│no                                                                                        
                                   │       │       │      │Euler's number                          │                                    │                             │                                                                                          
esv-test-secret-file-base64hmac    │      1│      1│loaded│This is a test secret from base64       │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:46:37 GMT│no                                                                                        
                                   │       │       │      │encoded hmac key file.                  │                                    │                             │                                                                                          
esv-test-secret-file-base64hmac-raw│      1│      1│loaded│This is a test secret from base64       │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:47:03 GMT│no                                                                                        
                                   │       │       │      │encoded hmac key file (raw).            │                                    │                             │                                                                                          
esv-test-secret-pi                 │      1│      1│loaded│Secret that contains the value of pi    │phales@trivir.com                   │Thu, 14 Dec 2023 15:22:28 GMT│yes (at script.59f84396-71e4-4c1d-a6ae-c4fc624d9752(name: 'Test-Script-1').script.4)      
esv-test-secret-pi-generic         │      2│      2│loaded│                                        │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 00:15:02 GMT│no                                                                                        
"
`;

exports[`frodo esv secret list "frodo esv secret list -u": should list the usage of the esv secrets 1`] = `
"Id                                 │Used                                                                                      
esv-admin-token                    │yes (at script.9674f7d1-7448-4544-879e-91587bb04f46(name: 'Get esv admin token').script.4)
esv-test-secret-cert-pem           │no                                                                                        
esv-test-secret-cert-pem-raw       │no                                                                                        
esv-test-secret-euler              │no                                                                                        
esv-test-secret-file-base64hmac    │no                                                                                        
esv-test-secret-file-base64hmac-raw│no                                                                                        
esv-test-secret-pi                 │yes (at script.59f84396-71e4-4c1d-a6ae-c4fc624d9752(name: 'Test-Script-1').script.4)      
esv-test-secret-pi-generic         │no                                                                                        
"
`;

exports[`frodo esv secret list "frodo esv secret list -uD test/e2e/exports/all-separate/everything": should list the usage of the esv secrets in the test/e2e/exports/all-separate/everything directory 1`] = `
"Id                                 │Used                                                                                
esv-admin-token                    │no                                                                                  
esv-test-secret-cert-pem           │no                                                                                  
esv-test-secret-cert-pem-raw       │no                                                                                  
esv-test-secret-euler              │no                                                                                  
esv-test-secret-file-base64hmac    │no                                                                                  
esv-test-secret-file-base64hmac-raw│no                                                                                  
esv-test-secret-pi                 │yes (at script.59f84396-71e4-4c1d-a6ae-c4fc624d9752(name: 'Test-Script-1').script.4)
esv-test-secret-pi-generic         │no                                                                                  
"
`;

exports[`frodo esv secret list "frodo esv secret list -uf test/e2e/exports/all/Alpha.everything.json": should list the usage of the esv secrets in the Alpha.everything.json file 1`] = `
"Id                                 │Used                                                                                
esv-admin-token                    │no                                                                                  
esv-test-secret-cert-pem           │no                                                                                  
esv-test-secret-cert-pem-raw       │no                                                                                  
esv-test-secret-euler              │no                                                                                  
esv-test-secret-file-base64hmac    │no                                                                                  
esv-test-secret-file-base64hmac-raw│no                                                                                  
esv-test-secret-pi                 │yes (at script.59f84396-71e4-4c1d-a6ae-c4fc624d9752(name: 'Test-Script-1').script.4)
esv-test-secret-pi-generic         │no                                                                                  
"
`;

exports[`frodo esv secret list "frodo esv secret list": should list the ids of the esv secrets 1`] = `
"esv-admin-token
esv-test-secret-cert-pem
esv-test-secret-cert-pem-raw
esv-test-secret-euler
esv-test-secret-file-base64hmac
esv-test-secret-file-base64hmac-raw
esv-test-secret-pi
esv-test-secret-pi-generic
"
`;
